Sumando buscador al proyecto

--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,11 @@ body {
     text-align: center;
 }
 
+.search-container {
+    text-align: center;
+    margin: 50px;
+}
+
 .productos-container {
     display: flex;
     flex-wrap: wrap;
